--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,27 @@ html {
     background-color: lightblue;
     color: black;
 }
+
+main{
+    background-color:lightblue;
+}
+h1{
+    font-size: 50px;
+    font-family:Arial, sans-serif;
+    margin-left: 50px;
+}
+
+p{
+    margin-left:50px;
+    margin-right:50px;
+    margin-top:50px;
+    font-family: Arial, sans-serif;
+}
+
+form{
+    margin-left:50px;
+    margin-right: 50px;
+    /*margin-top: 50px;*/
+    font-family:Arial, sans-serif;
+    /*background-color:lightgrey;*/
+}
