--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,8 @@ html {
     background-color: lightblue;
     color: black;
 }
+.jumbotron {
+    background-color: lightblue;
+    font-style: italic;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
