Updates from Jada

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
 main{
     background-color:lightblue;
 }
+
 h1{
     font-size: 50px;
     font-family:Arial, sans-serif;
@@ -35,4 +36,8 @@ form{
     /*margin-top: 50px;*/
     font-family:Arial, sans-serif;
     /*background-color:lightgrey;*/
+}
+
+.card-img-top {
+    width: 200px;
 }
